--- a/index.HTML
+++ b/index.HTML
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Estamos aprendiendo sobre html en catamarca">
     <title>APRENDIENDO HTML</title>
-    
+    <link rel="stylesheet" href="CSS/style.css"> 
 </head>
 <body>
   <h1>Aprendiendo html</h1>
@@ -55,14 +55,25 @@ En la casa:
   </pre>
   <hr>
   <h2>ETIQUETAS SAMÁNTICAS ESTRUCTURALES</h2>
-  <div>DIV: Es una etiqueta contenedora que no tiene semántica</div>
-  <header>HEADER: cabecera de un sitio web o una seccion</header>
-  <main>MAIN: define la sección principal del documento, solo puede existir una por documento</main>
-  <footer>FOOTER: pié de página de un sitio web o una sección</footer>
-  <nav>NAV: representa un menú de navegación</nav>
-  <article>ARTICLE: representa una sección de autocontenido (que por sí sola se explica)</article>
-  <aside>ASIDE: representa contenido complementario o secundario</aside>
-  <section>SECTION: representa una sección de contenido genérico</section>
-  <address>ADDRESS: representa una dirección física</address>
+  <div style="background-color: yellow;">DIV: Es una etiqueta contenedora que no tiene semántica</div>
+  <header style="background-color: violet;">HEADER: cabecera de un sitio web o una seccion</header>
+  <main style="background-color: turquoise;">MAIN: define la sección principal del documento, solo puede existir una por documento</main>
+  <footer style="background-color: tomato;">FOOTER: pié de página de un sitio web o una sección</footer>
+  <nav style="background-color: teal;">NAV: representa un menú de navegación</nav>
+  <article style="background-color: springgreen;">ARTICLE: representa una sección de autocontenido (que por sí sola se explica)</article>
+  <aside style="background-color: slategrey;">ASIDE: representa contenido complementario o secundario</aside>
+  <section style="background-color: skyblue;">SECTION: representa una sección de contenido genérico</section>
+  <address style="background-color: sienna;">ADDRESS: representa una dirección física</address>
+  <hr>
+  <h2>Etiquetas de líneas y de bloque</h2>
+  <div style="background-color: lime;">La etiqueta de bloque por exelencia es la DIV</div>
+  <span style="background-color: yellowgreen;">La etiqueta de línea por exelencia es la SPAN</span>
+  <span>Hola, soy otra SPAN</span>
+  <Script>
+    console.log("Hola, estamos aprendiendo HTML");
+  </Script>
+  <script src="JS/codigo.js">
+
+  </script>
 </body>
 </html>
