link de archivo nuevo

--- a/index.HTML
+++ b/index.HTML
@@ -72,8 +72,37 @@ En la casa:
   <Script>
     console.log("Hola, estamos aprendiendo HTML");
   </Script>
-  <script src="JS/codigo.js">
-
-  </script>
+  <script src="JS/codigo.js"></script>
+  <hr>
+  <h2>Imágenes</h2>
+  <img src="IMG/halloween-ilustracion-vectorial-png-fondo-blanco-hiperdetalle-maximo-detalle_921410-41492.webp" alt="Tabla">
+  <img src="IMG/ilustracion-cabeza-perro-sobre-fondo-blanco_1024046-6872.jpg" alt="Tabla2">
+  <img src="IMG/zanahoria-salta-sonrie-manera-linda-divertida-ai_894067-467.jpg" alt="Zanahoriaaa">
+  <img src="IMG/one-piece-anime-usagif-animation-1.gif" alt="luffy">
+  <hr>
+  <h2>Figuras</h2>
+  <figure>
+    <img src="IMG/zanahoria-salta-sonrie-manera-linda-divertida-ai_894067-467.jpg" alt="ZANAHORIA FELIZ">
+    <figcaption>Zanahoria feliz</figcaption>
+  </figure>
+  <hr>
+  <h2>Listas ordenadas</h2>
+  <h3>Estaciones del año</h3>
+  <ol>
+    <li>Pimavera</li>
+    <li>Verano</li>
+    <li>Otoño</li>
+    <li>Invierno</li>
+    
+  </ol>
+  <ol start="15">
+    <li>Pimavera</li>
+    <li>Verano</li>
+    <li>Otoño</li>
+    <li>Invierno</li>
+    </ol>
+    <hr>
+   <h2>Enlaces</h2> 
+   <a href="index2.html">llendo al nuevo archivo</a>
 </body>
 </html>
