--- a/index.HTML
+++ b/index.HTML
@@ -19,7 +19,7 @@
     <li><a href="index.HTML#figuras">FIGURAS</a></li>
     <li><a href="index.HTML#listas">LISTAS ORDENADAS</a></li>
     <li><a href="index.HTML#enlaces">ENLACES</a></li>
-
+    <li><a href="index.HTML#enlaces2">ENLACES ESPECIALES</a></li>
    </ul>
   <p>HOLA,Escribiendo mis primeros documentos HTML</p>
   <h2 id="encabezados">TUTORIAL DE HTML</h2>
@@ -120,10 +120,13 @@ En la casa:
    <a href="https://github.com/" target="_blank"real="nofollow">visita mi sitio web</a>
    <br><br>
    <hr>
-   <a href="https://www.whatsapp.com/?lang=es_LA" target="_blank"><img src="IMG/whatsapp.png" alt="Esta imagen abre mi whatsapp" width="50" height="50"></a>
+   
+   <h2 id="enlaces2">Enlaces especiales</h2>
+   <a href="mailto:gabrielelizondo5678@gmail.com">Enlace a correo electrónico</a><br>
+   <a href="tel:3834594836">Enlace a telefono</a><br>
+  <a href="https://web.whatsapp.com/send?phone=543834594836&text=Usuario de tu página web -Repaso HTML- quiere contactarse contigo" target="_blank">Enlace a whatsapp</a><br>
+   <a href="https://www.whatsapp.com/?lang=es_LA" target="_blank"><img src="IMG/whatsapp.png" alt="Esta imagen abre mi whatsapp" width="50" height="50"></a><br><br>
    <a href="index.HTML#inicio"><img src="IMG/2026751.png" alt="imagen que lleva al inicio" width="50"></a>
    <hr>
-   
-   
 </body>
 </html>
